[build-system]
requires = ["setuptools >= 61.0"]

[project]
name = "howtodwh"
version = "0.0.1"
authors = [
  { name="Golvokevich Boris", email="golovkevich@outlook.com" },
]
description = "Tool for interaction with DWH"
requires-python = ">=3.7"
dependencies = [
  "sqlalchemy~=2.0",
  "alembic~=1.13",
]

[tool.setuptools]
package-dir = {"" = "src"}

[project.optional-dependencies]
mssql = ["pytds"]
postgres = ["psycopg~=3.1"]
mysql = ["pymysql"]
oracle = ["oracledb"]

